[package]
name = "pesto_tool"
version = "0.1.3"
edition = "2024"
description = "Comments should be useful!"
license = "MIT"          
repository = "https://github.com/milogallii/pesto"  
readme = "README.md"     
keywords = ["cli", "comments"] 
categories = ["command-line-utilities"]
      
[dependencies]
regex = "1.12.3"
